# web_template

./: .env.example  .gitignore  CLAUDE.md  README.md  architect.md  docker-compose.yml  pyproject.toml
.claude/commands/: adr.md  impl.md  requirement.md  tasking.md
.claude/guidelines/: query.md  testcode.md
.github/workflows/: deploy-stg.yml  test.yml
alembic/: env.py
alembic/versions/: 01e47a3414fc_initial_tables.py  20241214_create_account_and_user_tables.py  e261c1159a05_add_account_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/command/: account_command.py  user_command.py
app/core/: config.py  deps.py  security.py
app/models/: __init__.py  account.py  account_oauth.py  account_passkey.py  account_password.py  refresh_token.py  user.py
app/query/: account_query.py  user_query.py
app/schemas/: account.py  auth.py  health.py  user.py
app/usecase/: login_usecase.py  logout_usecase.py  refresh_usecase.py  signup_usecase.py
app/worker/: celery_app.py
changes/3/: adr.md  requirement.md  tasks.md
docker/mysql/: init.sql
docker/postgres/: init.sh
docs/: aws-deployment-tasks.md  scaling-guide.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: login.spec.ts  protected-route.spec.ts  signup.spec.ts
frontend/src/: App.css  App.tsx
infrastructure/: alb.tf  ecr.tf  ecs.tf  frontend.tf  main.tf  network.tf  outputs.tf  rds.tf  secrets.tf  security.tf  variables.tf
openspec/: AGENTS.md
scripts/: console.py
ssot/: overview.md
tests/: conftest.py
(+59 files in other folders)
